@@ -1,3 +1,10 @@
+2012-01-27  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 10.1.0 Released.
+
+	* Test results:
+	  http://bamboo.asterisk.org/browse/TESTING-ASTERISK1010RCS-4
+
 2012-01-24  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 10.1.0-rc2 Released.
